# RustQuake

./: Cargo.toml  README.md
src/: helper_functions.rs  lib.rs
src/models/: mod.rs  motion.rs  units.rs
tests/: motion_test.rs
tests/data/: acc.txt  disp.txt  vel.txt
