[package]
name = "rustquake"
version = "0.1.0"
edition = "2024"
authors = ["Numan Burak Fidan"]
license = "MIT OR Apache-2.0"
description = "RustQuake is a high-performance Rust library for group motion calculations, signal processing, and seismic response analysis, inspired by SeismoSignal."
repository = "https://github.com/nubufi/RustQuake"
readme = "README.md"
keywords = ["geotechnical", "earthquake", "seismicity", "ground motion", "rust"]
categories = ["science", "mathematics"]

[dependencies]
# Numerical computation crates
ndarray = "0.16.1"
ordered-float = "5"

[dev-dependencies]
criterion = "0.5.1"  # For benchmarking

[profile.release]
opt-level = 3
